fix overall container overflow hidden with a fixed width

--- a/app/assets/stylesheets/application.css.scss
+++ b/app/assets/stylesheets/application.css.scss
@@ -186,6 +186,7 @@ body {
 }
 
 #overall-container {
+	width:1024px;
 	overflow:hidden;
 	min-height: $vertical-menu-width;
 	margin: 0 auto;
